lib_LTLIBRARIES = libpepper-x11.la

libpepper_x11_includedir=$(includedir)/pepper
libpepper_x11_include_HEADERS = pepper-x11.h

libpepper_x11_la_CFLAGS = $(PEPPER_X11_CFLAGS)
libpepper_x11_la_LIBADD = $(PEPPER_X11_LIBS)

libpepper_x11_la_SOURCES =  pepper-x11.h    \
                            x11-internal.h  \
                            x11-common.c    \
                            x11-output.c    \
                            x11-input.c
